--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+env_logger = "0.11.8"
+pollster = "0.4.0"
 tokio = "1.48.0"
 wgpu = "27.0.1"
 winit = "0.30.12"
