--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = "1.0.100"
 bytemuck = {version = "1.24.0", features = ["derive"]}
 env_logger = "0.11.8"
+image = {version = "0.25.9", features = ["png", "jpeg"], default-features = false}
 pollster = "0.4.0"
 tokio = "1.48.0"
 wgpu = "27.0.1"
